Fix tooltips z-index
The tooltips should be above the modals.

--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -8,7 +8,7 @@
   padding: 3px 5px;
   position: absolute;
   transition: opacity $transition-time;
-  z-index: 100;
+  z-index: 999;
   left: -10000px;
 
   &.error {
